<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/default_margin">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/simulateInvestmentTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/simulateInvestmentAmountToInvestTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_to_invest_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simulateInvestmentTopGuideline" />

    <EditText
        android:id="@+id/simulateInvestmentAmountToInvestEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/amount_to_invest_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simulateInvestmentAmountToInvestTv" />


    <TextView
        android:id="@+id/simulateInvestmentDueDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duedate_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simulateInvestmentAmountToInvestEt" />

    <EditText
        android:id="@+id/simulateInvestmentDueDateEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/duedate_hint"
        android:inputType="date"
        android:maxLength="10"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simulateInvestmentDueDateTv" />


    <TextView
        android:id="@+id/simulateInvestmentCdiPercentageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cdi_percentage_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simulateInvestmentDueDateEt" />

    <EditText
        android:id="@+id/simulateInvestmentCdiPercentageEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/cdi_percentage_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simulateInvestmentCdiPercentageTv"
        app:layout_constraintVertical_bias="1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/simulateInvestmentBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/simulateInvestmentSimulateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/easyinvest_button"
        android:enabled="false"
        android:text="@string/simulate_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/simulateInvestmentBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/simulateInvestmentLoadingFl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
